unpackaged/main/default/objects/Legal_Entity__c/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <label>Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>