unpackaged/main/default/objects/Legal_Entity__c/fields/CegidInvoiceTemplateCode__c.field-meta.xml
<CustomField>
    <fullName>CegidInvoiceTemplateCode__c</fullName>
    <label>Cegid Invoice Template Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>