unpackaged/main/default/objects/Legal_Entity__c/fields/CegidSalesPersonId__c.field-meta.xml
<CustomField>
    <fullName>CegidSalesPersonId__c</fullName>
    <label>CegidSalesPersonId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>