unpackaged/main/default/objects/Legal_Entity__c/fields/CegidStoreCode__c.field-meta.xml
<CustomField>
    <fullName>CegidStoreCode__c</fullName>
    <label>CegidStoreCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>