unpackaged/main/default/objects/Legal_Entity__c/fields/CountryLabel__c.field-meta.xml
<CustomField>
    <fullName>CountryLabel__c</fullName>
    <label>Country Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>