unpackaged/main/default/objects/Legal_Entity__c/fields/FooterBilling__c.field-meta.xml
<CustomField>
    <fullName>FooterBilling__c</fullName>
    <label>Footer Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>