unpackaged/main/default/objects/Legal_Entity__c/fields/ZipCodate__c.field-meta.xml
<CustomField>
    <fullName>ZipCodate__c</fullName>
    <label>Zip Codate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>